testsuite/tests/typecheck/should_fail/T1595.stderr

T1595.hs:8:15: error: [GHC-76037]
    Not in scope: type constructor or class ‘DoesNotExist’

T1595.hs:13:22: error: [GHC-76037]
    Not in scope: type constructor or class ‘DoesNotExist’
